# ChangeLog for dev-php5/pecl-haru
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-haru/Attic/ChangeLog,v 1.1 2010/09/26 18:22:35 olemarkus Exp $

*pecl-haru-1.0.0 (26 Sep 2010)

  26 Sep 2010; <olemarkus@gentoo.org> +pecl-haru-1.0.0.ebuild,
  +metadata.xml:
  Added pecl-haru (bug #249443)
