@@ -1,6 +1,11 @@
 # ChangeLog for dev-php5/pecl-haru
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-haru/Attic/ChangeLog,v 1.1 2010/09/26 18:22:35 olemarkus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-haru/Attic/ChangeLog,v 1.2 2010/11/04 13:25:35 mabi Exp $
+
+*pecl-haru-1.0.0-r1 (04 Nov 2010)
+
+  04 Nov 2010; Matti Bickel <mabi@gentoo.org> +pecl-haru-1.0.0-r1.ebuild:
+  add version that supports minor version slotting
 
 *pecl-haru-1.0.0 (26 Sep 2010)
 
